--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <div class="order-1 order-xl-2 col-lg-12 col-xl-7">
                             <div class="background-image-area">
                                 <div class="thumbnail-image">
-                                    <img src="assets/img/banner.JPG" alt="Personal Portfolio">
+                                    <img src="assets/img/banner.jpg" alt="Personal Portfolio">
                                 </div>
                             </div>
                         </div>
